pantheon-theme/styles/screen-16x10.css
/* ... */
@font-face {
    font-family: Roboto Mono;
    src: url(../fonts/roboto-mono-regular.woff) format("woff")
}

*,
::after,
::before {
    -webkit-box-sizing: border-box;
    box-sizing: border-box
}

a,
abbr,
acronym,
address,
applet,
article,
aside,
audio,
b,
big,
blockquote,
body,
canvas,
caption,
center,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
embed,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
mark,
menu,
nav,
object,
ol,
output,
p,
pre,
q,
ruby,
s,
samp,
section,
small,
span,
strike,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
tt,
u,
ul,
var,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section {
    display: block
}

.caption p,
.shower,
body {
    line-height: 1
}

ol,
ul {
    list-style: none
}

blockquote,
q {
    quotes: none
}

blockquote::after,
blockquote::before,
q::after,
q::before {
    content: none
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

a {
}

@page {
    margin: 0;
    size: 1024px 640px
}

.shower {
    color: #000;
    counter-reset: slide;
    font-family: Avenir, sans-serif;
    -webkit-print-color-adjust: exact;
    -webkit-text-size-adjust: none;
    -moz-text-size-adjust: none;
    -ms-text-size-adjust: none
}

@media print {
    .shower {
        text-rendering: geometricPrecision
    }
}

.caption {
    margin-top: -24px;
    font-size: 24px;
    display: none;
    margin-bottom: 1em;
    padding: 1.02em 0 .9em 1em;
    width: 100%;
    background: #EFD01B linear-gradient(135deg, #EFD01B 50%, #e0c527 50%) no-repeat;
}

@media (min-width:1168px) {
    .caption {
        margin-top: -48px;
        font-size: 48px
    }
}

@media (min-width:2336px) {
    .caption {
        margin-top: -96px;
        font-size: 96px
    }
}

.caption h1 {
    padding-bottom: .28em;
    color: #fff;
    font: 1.17em/1 Avenir Light, sans-serif
}

.caption p {
    color: #EEF2F3;
    font-size: .58em
}

.caption a {
    color: inherit
}

.slide {
    position: relative;
    z-index: 1;
    overflow: hidden;
    padding: 104px 112px 0 96px;
    width: 1024px;
    height: 640px;
    background: #fff;
    line-height: 1.25;
    font-size: 24px
}

.slide::after {
    position: absolute;
    left: 96px;
    bottom: 48px;
    color: #bdbdbd;
    counter-increment: slide;
    content: counter(slide)
}

.slide h2 {
    margin-bottom: 32px;
    color: #000;
    font: 36px/1 Avenir Light, sans-serif
}

.slide p {
  margin-bottom: 20px;
}

.slide p.note,
.slide pre .comment {
    color: #9e9e9e;
}

.slide a {
    color: #EFCF1C;
su
}

.slide b,
.slide strong {
    font-weight: 700;
    color: #EFD01B;
}

.slide blockquote,
.slide dfn,
.slide em,
.slide i {
    font-style: italic;
}

.slide code,
.slide kbd,
.slide mark,
.slide samp {
    padding: .1em .3em;
    background: #44525E
}

.slide code.block {
    padding: 0.8em;
    background: #44525E;
    display: block;
    font-size: 19px;
    position: absolute;
    left: 0;
}

.slide code,
.slide kbd,
.slide samp {
    line-height: 1;
    font-family: Roboto Mono, monospace, monospace
}

.slide sub,
.slide sup {
    position: relative;
    line-height: 0;
    font-size: 75%
}

.slide sub {
    bottom: -.25em
}

.slide sup {
    top: -.5em
}

.slide blockquote::before {
    position: absolute;
    margin: -.04em 0 0 -.4em;
    color: #bdbdbd;
    line-height: 1;
    font-style: normal;
    font-size: 7em;
    content: '\201D'
}

.slide blockquote+figcaption {
    margin: -1em 0 1em;
    font-style: italic;
    font-weight: 700
}

.slide ol,
.slide ul {
    margin-bottom: 1em;
    counter-reset: list
}

.slide ol li,
.slide ul li {
    page-break-inside: avoid;
    padding: 5px 0;
}

.slide ol li::before,
.slide ul li::before {
    display: inline-block;
    width: 2em;
    color: #bdbdbd;
    text-align: right
}

.slide ol ol,
.slide ol ul,
.slide ul ol,
.slide ul ul {
    margin-bottom: 0;
    margin-left: 2em
}

.slide ul>li::before {
    padding-right: .5em;
    content: '•'
}

.slide ul>li:lang(ru)::before {
    content: '—'
}

.slide ol>li::before {
    padding-right: .4em;
    counter-increment: list;
    content: counter(list) "."
}

.slide ol>li[value]::before {
    content: attr(value) "."
}

.slide ul>li[value]::before {
    content: attr(value)
}

.slide table {
    margin-left: -96px;
    margin-bottom: 1em;
    width: calc(100% + 96px + 112px)
}

.slide table td {
  padding: 10px 0;
}

.slide table td:first-child,
.slide table th:first-child {
    padding-left: 96px
}

.slide table td:last-child,
.slide table th:last-child {
    padding-right: 96px
}

.slide table th {
    text-align: left;
    font-weight: 700
}

.slide table tr:not(:last-of-type)>* {
    background: -webkit-gradient(linear, left bottom, left top, color-stop(.055em, #EFD01B), color-stop(.055em, transparent)) repeat-x;
    background: linear-gradient(to top, #EFD01B .055em, transparent .055em) repeat-x;


}

.slide table.striped tr:nth-child(even) {
    background: #edf7ee
}

.slide table.striped tr>* {
    background-image: none
}

.slide pre {
    margin-bottom: 1em;
    counter-reset: code;
    white-space: normal;
    overflow: scroll;
    max-height: 500px;
}

.slide code {
  color: #fff;
}

.slide pre code {
    display: block;
    margin-left: -96px;
    padding: 0 0 0 96px;
    width: calc(100% + 96px + 112px);
    background: 0 0;
    line-height: 2;
    white-space: pre;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;

}

.slide pre code:not(:only-child).mark {
    background: #edf7ee;
    color: #ffffff;
}

.slide pre code:not(:only-child)::before {
    position: absolute;
    margin-left: -2em;
    color: #bdbdbd;
    counter-increment: code;
    content: counter(code, decimal-leading-zero) ".";
}
/* ... */

